esp/kw/tests/test_ingress_nginx/values.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myservicea
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: eclwatch.foo.org
    http:
      paths:
      - path: /
        backend:
          serviceName: eclwatch
          servicePort: 8010
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-myserviceb
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: eclqueries.foo.org
    http:
      paths:
      - path: /
        backend:
          serviceName: eclqueries
          servicePort: 8002
